horizontal scroll solved

--- a/css/index.css
+++ b/css/index.css
@@ -57,15 +57,19 @@ body{
     list-style: none;
     padding: 23px 30px;
 }
+.leftnav li:hover{
+    background-color: white;
+    a{
+        color: rgb(3, 218, 208);
+    }
+}
 
 .leftnav li a{
     text-decoration: none;
     color: white;
 }
 
-.leftnav li a:hover{
-    color:antiquewhite;
-}
+
 
 .rightnav{
     width:30%;
@@ -78,6 +82,11 @@ body{
     margin-right: 10%;
 }
 
+.btn-sml:hover{
+   background-color: rgb(116, 2, 111);
+   color: yellow;
+}
+
 .login-btn{
     background-color: rgb(116, 2, 111);
     color: white;
@@ -86,7 +95,7 @@ body{
 }
 
 .login-btn:hover{
-    color: red;
+    color: yellow
 }
 
 .background{
@@ -124,6 +133,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
 }
 .sec1img{
     display: flex;
@@ -134,6 +144,7 @@ body{
     font-weight: bolder;
 }
 .sec1img img{
+    position: relative;
     width: 100%;
 }
 .sec1cont{
@@ -141,7 +152,7 @@ body{
     justify-content: center;
     width: 50%;
     text-align:justify;
-    padding: 25px 25px 25px 25px;
+    margin: 25px 25px 25px 25px;
 }
 .sec1cont button{
     a{
@@ -297,7 +308,7 @@ section{
     display: flex;
     color: solid black;
     font-family: 'Courier New', Courier, monospace;
-    margin-right: 10%;
+    padding-right: 10%;
     h3{
         text-decoration: underline;
         font-size: 25px;
@@ -333,6 +344,10 @@ section{
     }
     html{
         scroll-behavior: smooth;
+        scrollbar-width: 100%;
+    }
+    body{
+        width: 100%;
     }
     /* media Header */
     .header img{
@@ -359,14 +374,14 @@ section{
     }
     .btn-sml{
         margin: 0%;
-        width: 50%;
+        width: 70%;
     }
     #search{
-        width: 60%;
+        width: 70%;
         margin-bottom: 5px;
     }
     .login-btn{
-        width: 50%;
+        width: 100%;
         margin-top: 10px;
         height: 30px;
         border-radius: 20%;
@@ -387,7 +402,7 @@ section{
     .firstSection{
         margin-top: 20px;
         width: 100%;
-        height: 50vh;
+        height: 40vh;
         background-color: rgb(236, 236, 89);
         p{
             color: black;
@@ -418,7 +433,15 @@ section{
     .sec1cont{
         width: 95%;
     }
+    .navbar{
+        background-image: none;
+        background-color: rgb(26, 24, 24);
+    }
 
+    /* first section */
+    .background{
+        
+    }
     /* media section 2 */
     .flex{
         display: inline-block;
@@ -431,6 +454,9 @@ section{
     }
 
     /* media footer */
+    .footer{
+        width: 100%;
+    }
     .content-logo img{
         height: 100px;
     }
@@ -442,6 +468,9 @@ section{
     }
     .footer3 input{
         width: 60%;
+    }
+    .footer3 button{
+        width: 30%;
     }
     
 }
